[tool.poetry]
name = "dejavu"
version = "0.1.0"
description = ""
authors = ["Jannik Blähser <30416815+flash0591@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pydub = "0.23.1"
PyAudio = "0.2.14"
numpy = "1.26.2"
scipy = "1.11.4"
matplotlib = "3.1.1"
mysql-connector-python = "8.0.17"
psycopg2 = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
